--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
+.app__flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .section {
   padding: 6rem 0 2rem;
 }
@@ -19,7 +25,6 @@
 }
 
 .container {
-  max-width: 968px;
   margin-left: auto;
   margin-right: auto;
 }
