--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,13 @@ TABLET: 768px */
   --title-color-dark: hsl(var(--hue), var(--sat), 0%);
   --text-color: hsl(var(--hue), var(--sat), 46%);
   --body-color: hsl(var(--hue), var(--sat), 98%);
+  --light-gray-color: #e4e4e4;
   --container-color: #fff;
 
   /* FONT  */
   --body-font: 'Poppins', sans-serif;
 
-  --extra-large-fs: 3.5rem;
+  --large-fs: 3.5rem;
   --h1-fs: 2.25rem;
   --h2-fs: 1.5rem;
   --h3-fs: 1.25rem;
