finished about section

--- a/src/App.scss
+++ b/src/App.scss
@@ -79,7 +79,7 @@
 }
 
 .section {
-  padding: 6rem 0 2rem;
+  padding: 0 0 2rem;
 }
 
 .section__title {
@@ -145,8 +145,18 @@
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
+  body {
+    margin: 0 0 var(--header-height) 0;
+  }
+  .app__wrapper {
+    padding-top: 0;
+  }
   .section {
     padding: 2rem 0 4rem;
+  }
+
+  .section__subtitle {
+    margin-bottom: 3rem;
   }
 }
 
@@ -154,8 +164,9 @@
 }
 
 /* For small devices */
-@media screen and (max-width: 400px) {
-  .app__navigation {
+@media screen and (max-width: 425px) {
+  .app__navigation,
+  .app__social {
     display: none;
   }
 }
